kubeflow-deployments/fix-certmanager/.build/iap-ingress/extensions_v1beta1_ingress_envoy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.global-static-ip-name: jl-cm-0608-001-ip
    networking.gke.io/managed-certificates: gke-certificate
  labels:
    kustomize.component: iap-ingress
  name: envoy-ingress
  namespace: istio-system
spec:
  rules:
  - host: jl-cm-0608-001.endpoints.jlewi-dev.cloud.goog
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /*
